refactor: Reorganize code for improved readability and structure
- Refactored Javadoc formatting across `ConversationalAI` and utility classes for consistency and clarity.
- Improved `AudioUtils` and `AudioChunkProcessor` code structure with better indentation and alignment.
- Reordered class definitions in `AudioChunkProcessor` for logical grouping and readability.
- Updated test files to use `List.of` over `Arrays.asList` for concise collection initialization.
- Reorganized imports and applied consistent formatting to enhance maintainability.